--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "bun run src/server/main.ts",
     "dev": "bun run dev:css & bun run dev:js & bun run dev:server",
     "dev:js": "bun --watch build ./src/client/main.ts --outdir ./dist/assets",
-    "dev:css": "bunx @tailwindcss/cli -i ./src/client/style.css -o ./dist/assets/main.css --watch",
+    "dev:css": "bun run scripts/watch-css.ts",
     "dev:server": "bun --watch run src/server/main.ts",
     "commit": "git add --all && git commit",
     "check": "bunx @biomejs/biome@beta check src",
